Thu Jan 29 01:56:02 2004  why the lucky stiff  <why@ruby-lang.org>

	* ext/syck/rubyext.c: usec round-tripping skew. [ruby-core:2305]

	* lib/yaml/rubytypes.rb: character Range now round-trips. [ruby-core:2306]

	* test/yaml/test_yaml.rb: add Time and Range tests.

Thu Jan 29 00:00:46 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss: rss/parser.rb is always required.

Wed Jan 28 15:09:14 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/rss/*.rb: remove "test/" prefix.

Wed Jan 28 13:07:02 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/extconf.rb: include iconv.h for libiconv.  [ruby-dev:22715]

Wed Jan 28 12:43:07 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/rss: rss library imported. [ruby-dev:22726]

Tue Jan 27 15:00:14 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* misc/ruby-mode.el: better support for general delimited
	  strings.  [ruby-dev:22695]

Tue Jan 27 11:04:40 2004  FUKUMOTO Atsushi  <fukumoto@nospam.imasy.or.jp>

	* ext/socket/socket.c (s_recvfrom): sending length should be an
	  invariant while retrying on EAGAIN.  [ruby-talk:89962]

Tue Jan 27 10:31:28 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/win32ole/win32ole.c (set_argv): fix condition.

Tue Jan 27 02:26:31 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httputils.rb (WEBrick:HTTPUtils::parse_header):
	  refine regex for header-name.

Mon Jan 26 22:53:04 2004  Dave Thomas  <dave@pragprog.com>

	* io.c: Remove documentation references to $defout.

Mon Jan 26 14:41:46 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/weakref.rb (WeakRef::initialize): set up @__id before
	  calling "super".

	* lib/delegate.rb (Delegator::initialize): preserve
	  singleton_method_added method [ruby-dev:22685]

	* lib/delegate.rb (Delegator::initialize): use Kernel::raise
	  instead of mere raise.  [ruby-dev:22681]

Mon Jan 26 12:45:23 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c: define CONST84 when TCL_MAJOR_VERSION == 7
