@@ -4,7 +4,10 @@ require "test/unit"
 require "rss/parser"
 require "rss/1.0"
 require "rss/2.0"
+dir = File.dirname(File.expand_path(__FILE__))
+$:.push(dir)
 require "common"
+$:.delete(dir)
 
 class TestAccessor < Test::Unit::TestCase
 	include TestRSSMixin
